@startuml
!define DARKORANGE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml


title __BUSINESS's Class Diagram__\n

  namespace wasteless.server {
    namespace business {
      class wasteless.server.business.ExportService {
          + ExportService()
          + exportJsonWasteReport()
          + exportTextWasteReport()
          - getReportGenerator()
      }

       class wasteless.server.business.GroceryListService {
                + GroceryListService()
                + createGroceryList()
                + deleteGroceryList()
                + getAllGroceryLists()
                + getGroceryListById()
                + updateGroceryList()
            }

           class wasteless.server.business.ItemService {
                     + ItemService()
                     + createItem()
                     + deleteItem()
                     + getAllItems()
                     + getItemById()
                     + updateItem()
                 }

      class wasteless.server.business.UserService {
                + UserService()
                + createUser()
                + deleteUser()
                + getActiveUser()
                + getAllUsers()
                + getUserById()
                + loginUser()
                + updateUser()
            }

       class wasteless.server.business.WasteManagerService {
                 + getTotalCalories()
             }



    }
  }
  



  

  wasteless.server.business.ExportService o-- wasteless.server.export.factory.FactoryProvider : factoryProvider
  wasteless.server.business.GroceryListService o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
  wasteless.server.business.GroceryListService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
  wasteless.server.business.GroceryListService o-- wasteless.server.persistance.UserRepository : userRepository
  wasteless.server.business.ItemService o-- wasteless.server.persistance.GroceryListRepository : groceryListRepository
  wasteless.server.business.ItemService o-- wasteless.server.persistance.ItemRepository : itemRepository
  wasteless.server.business.UserService o-- wasteless.server.persistance.UserRepository : userRepository


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
